# stock_screener

./: .gitignore  360ONE.txt  3MINDIA.txt  ABB.txt  DEFERRED_ITEMS.md  FLOW_BACKTEST.md  FLOW_LIVE.md  IMPLEMENTATION_PLAN.md  Makefile  Pyramiding-Implementation-Spec.md  README.md  Stock-Screener-Implementation-Spec.md  TASK.md  Test.csv  Untitled-1.ipynb  access_token.txt  analysis_results.txt  analyze_backtest.py  avg_score.py  backtest_output_v3.txt  backtesting.py  backtesting_harshit.py  backtesting_new.py  calculate_position_size.py  calculate_ranking.py  check_daily_buys.py  check_daily_output.txt  check_day1.py  check_day1_output.txt  check_losses.py  debug_db.py  debug_db_output.txt  debug_flow.py  diagnose_output.txt  diagnose_output_v2.txt  diagnose_returns.py  diff.txt  filters.csv  fix_dashboard.py  generate_charts.py  (+16 more)
.agent/: .instructions.md  instructions.md
backtesting_results/: momentum_config_2018-01-01_2026-02-15_daily_sl_mwb_off_20260216_192756.txt  momentum_config_2018-01-01_2026-02-15_daily_sl_mwb_on_20260216_192302.txt  momentum_config_2018-01-01_2026-02-15_daily_sl_mwb_on_20260221_134533.txt  momentum_config_2018-01-01_2026-02-15_weekly_sl_mwb_off_20260216_191711.txt  momentum_config_2018-01-01_2026-02-15_weekly_sl_mwb_off_20260216_194640.txt  momentum_config_2018-01-01_2026-02-21_daily_sl_mwb_off_20260221_141551.txt  momentum_config_2022-01-01_2022-03-31_daily_sl_mwb_on_20260222_152530.txt  momentum_config_2022-01-01_2022-03-31_daily_sl_mwb_on_20260222_152632.txt  momentum_config_2022-01-01_2026-02-20_weekly_sl_mwb_off_20260307_140739.txt  momentum_config_2022-01-01_2026-02-22_daily_sl_mwb_on_20260222_130332.txt  momentum_config_2022-01-01_2026-02-22_daily_sl_mwb_on_20260222_142211.txt  momentum_config_2022-01-01_2026-02-22_daily_sl_mwb_on_20260222_150547.txt  momentum_config_2022-01-01_2026-02-22_daily_sl_mwb_on_20260222_154030.txt  momentum_config_2022-01-01_2026-02-22_daily_sl_mwb_on_20260222_170423.txt  momentum_config_2022-01-01_2026-02-22_daily_sl_mwb_on_20260222_195044.txt  momentum_config_2022-01-01_2026-02-22_weekly_sl_mwb_off_20260222_193303.txt  momentum_config_2022-01-01_2026-02-22_weekly_sl_mwb_off_20260222_195615.txt  momentum_config_2022-01-01_2026-02-28_daily_sl_mwb_on_20260303_165911.txt  momentum_config_2022-01-01_2026-02-28_daily_sl_mwb_on_20260303_174543.txt  momentum_config_2022-01-01_2026-02-28_daily_sl_mwb_on_20260303_192447.txt  momentum_config_2022-01-01_2026-02-28_weekly_sl_mwb_off_20260303_181344.txt  momentum_config_2022-01-01_2026-02-28_weekly_sl_mwb_off_20260303_181716.txt  momentum_config_2022-01-01_2026-02-28_weekly_sl_mwb_off_20260303_182021.txt  momentum_config_2022-01-01_2026-02-28_weekly_sl_mwb_off_20260307_141624.txt  momentum_config_2022-01-01_2026-02-28_weekly_sl_mwb_off_20260307_142816.txt  (+36 more)
config/: __init__.py  app_config.py  extras.py  (+5 more)
(+480 files in other folders)
