[project]
name = "stock-screener"
version = "0.1.0"
description = "Identify and filter stocks from NSE / BSE to invest in"
authors = [
    {name = "Yash Bhargava",email = "yashbhargava.code@gmail.com"},
    {name = "Harshit Garg",email = "harshitgarg.0196@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kiteconnect (>=5.0.1,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas_ta (>=0.3.14b)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-smorest (>=0.46.2,<0.47.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
